more alignment fixes

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -92,6 +92,8 @@ h4 span:first-child {
 
 .section-title {
   flex: 1;
+  text-align: right;
+  padding-right: 30px;
 }
 
 .section-content {
@@ -101,18 +103,6 @@ h4 span:first-child {
 .container {
   max-width: 750px;
   padding: 0 30px;
-}
-
-.col-sm-6 {
-  margin-bottom: 10px;
-}
-
-.col-sm-12 h4 {
-  margin-top: 12px;
-}
-
-.col-sm-12 + .col-sm-12 {
-  margin-top: 30px;
 }
 
 .item-row {
@@ -145,11 +135,6 @@ h4 span:first-child {
   color: #555;
   font-size: 26px;
   margin-top: -4px;
-}
-
-#content aside {
-  text-align: right;
-  padding-right: 30px;
 }
 
 #profiles .network {
@@ -221,22 +206,6 @@ h4 span:first-child {
   }
 }
 
-@media (max-width: 768px) {
-  .col-sm-6:last-child {
-    margin-bottom: 0px;
-  }
-
-  #content aside {
-    margin-bottom: 20px;
-    padding-right: 0;
-    text-align: left;
-  }
-
-  #publications .website a:before {
-    content: 'View publication';
-  }
-}
-
 @media (max-width: 480px) {
   h1 {
     font-size: 28px;
@@ -276,128 +245,28 @@ h4 span:first-child {
   }
 }
 
+@media (max-width: 768px) {
+  .section-content {
+    flex: 6;
+  }
+
+  #content h3 {
+    font-size: 20px;
+    margin-top: -1px;
+  }
+}
+
 @page {
   margin-top: 0.5in;
   margin-bottom: 0.5in;
 }
 
 @media print {
-  /* body {
-    font-size: 12px;
-  }
-
   a[href]:after {
     display: none;
-  }
-
-  h1 {
-    font-size: 24px;
-  }
-
-  #header h2 {
-    font-size: 18px;
-    margin-top: -8px;
-  }
-
-  h4 {
-    font-size: 13px;
-  }
-
-  #header {
-    padding: 0;
   }
 
   #content aside {
     margin: 0 !important;
   }
-
-  #content h3 {
-    font-size: 16px;
-    margin-top: 0;
-  }
-
-  blockquote {
-    border: 0;
-    border-left: 3px solid #e7e9ec;
-    font-size: 12px;
-  }
-
-  li:before {
-    font: 10px Octicons;
-  }
-
-  .strike-through {
-    border-top-color: transparent;
-  }
-
-  .strike-through span + span {
-    font-size: 12px;
-  }
-
-  .col-sm-push-3 {
-    left: 25%;
-  }
-
-  .col-sm-1,
-  .col-sm-2,
-  .col-sm-3,
-  .col-sm-4,
-  .col-sm-5,
-  .col-sm-6,
-  .col-sm-7,
-  .col-sm-8,
-  .col-sm-9,
-  .col-sm-10,
-  .col-sm-11,
-  .col-sm-12 {
-    float: left;
-  }
-
-  .col-sm-12 {
-    width: 100%;
-  }
-
-  .col-sm-11 {
-    width: 91.66666666666666%;
-  }
-
-  .col-sm-10 {
-    width: 83.33333333333334%;
-  }
-
-  .col-sm-9 {
-    width: 75%;
-  }
-
-  .col-sm-8 {
-    width: 66.66666666666666%;
-  }
-
-  .col-sm-7 {
-    width: 58.333333333333336%;
-  }
-
-  .col-sm-6 {
-    width: 50%;
-  }
-
-  .col-sm-5 {
-    width: 41.66666666666667%;
-  }
-
-  .col-sm-4 {
-    width: 33.33333333333333%;
-  }
-
-  .col-sm-3 {
-    width: 25%;
-  }
-
-  .col-sm-2 {
-    width: 16.666666666666664%;
-  }
-
-  .col-sm-1 {
-    width: 8.333333333333332%;
-  } */
 }
